MULTISITE-2232 Improve css for news block

--- a/sites/all/themes/ec_resp/css/less/feature-news.less
+++ b/sites/all/themes/ec_resp/css/less/feature-news.less
@@ -26,6 +26,7 @@
       border-top: 1px solid #DDDDDD;
       border-bottom: 1px solid #DDDDDD;  
       overflow: hidden;
+      color: @textColor;
       div.news { 
         padding-left: 15px;
         padding-right: 15px;
