MULTISITE-2319 Fix inline display in forms

--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -14,6 +14,19 @@
   }  
 }
 
+/* --------------- Search Form ---------------- */
+#search-form {
+  #edit-basic {
+    .form-item-keys {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+    #edit-submit {
+      vertical-align: top;
+    }
+  }
+}
+
 /* --------------- Search Results ---------------- */
 ol.search-results {
   padding-left: 0;
