MULTISITE-2320 Improve display of buttons

--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -107,8 +107,8 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #333;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+@btn-default-bg:                 #D9EDF7;
+@btn-default-border:             darken(@btn-info-bg, 5%);
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
@@ -324,8 +324,8 @@
 @nav-tabs-justified-active-link-border-color:     @body-bg;
 
 // Pills
-@nav-pills-active-link-hover-bg:            @component-active-bg;
-@nav-pills-active-link-hover-color:         #fff;
+@nav-pills-active-link-hover-bg:            #ddd;
+@nav-pills-active-link-hover-color:         #333;
 
 
 // Pagination
