--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -5,6 +5,7 @@
     margin-bottom: 0;
     input {
       border-radius: 4px 0 0 4px;
+      border-color: @btn-default-border;
     }
   }
   .form-actions input {
