--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -70,7 +70,23 @@ ul.nav-tabs {
 .tabs {
   position: relative;
   z-index: 1;
+  .tabs-secondary {
+    padding-left: 15px;
+    background-color: #fff;
+    border-right: 1px solid @nav-tabs-border-color;
+    border-left: 1px solid @nav-tabs-border-color;
+    li {
+      margin-top: 5px;
+      a {
+        border-top: 1px solid @nav-tabs-border-color;
+        border-right: 1px solid @nav-tabs-border-color;
+        border-left: 1px solid @nav-tabs-border-color;
+        border-radius: @border-radius-base @border-radius-base 0 0;
+      }
+    }
+  }
 }
+
 
 /* --------------- Dropdown  --------------- */
 .dropdown-menu {
