--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -20,9 +20,9 @@
 
 @brand-primary:         #0065A2;
 @brand-success:         #5cb85c;
-@brand-warning:         #f0ad4e;
+@brand-warning:         #F0AD4E;
 @brand-danger:          #d9534f;
-@brand-info:            #5BAEDE;
+@brand-info:            #FAF6B4;
 
 // Scaffolding
 // -------------------------
@@ -108,27 +108,27 @@
 
 @btn-default-color:              #333;
 @btn-default-bg:                 #D9EDF7;
-@btn-default-border:             darken(@btn-info-bg, 5%);
+@btn-default-border:             darken(@btn-default-bg, 20%);
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             darken(@btn-primary-bg, 5%);
+@btn-primary-border:             darken(@btn-primary-bg, 20%);
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
-@btn-success-border:             darken(@btn-success-bg, 5%);
+@btn-success-border:             darken(@btn-success-bg, 20%);
 
 @btn-warning-color:              #fff;
 @btn-warning-bg:                 @brand-warning;
-@btn-warning-border:             darken(@btn-warning-bg, 5%);
+@btn-warning-border:             darken(@btn-warning-bg, 20%);
 
 @btn-danger-color:               #fff;
 @btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              darken(@btn-danger-bg, 5%);
+@btn-danger-border:              darken(@btn-danger-bg, 20%);
 
-@btn-info-color:                 #fff;
+@btn-info-color:                 #333;
 @btn-info-bg:                    @brand-info;
-@btn-info-border:                darken(@btn-info-bg, 5%);
+@btn-info-border:                darken(@btn-info-bg, 40%);
 
 @btn-link-disabled-color:        @gray-light;
 
