MULTISITE-2320 Improve display of menus

--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -8,10 +8,13 @@
       border-color: @btn-default-border;
     }
   }
-  .form-actions input {
-    margin-right: 0;
-    border-radius: 0 4px 4px 0;
-    border-left: none;
+  .form-actions  {
+    margin: 0;
+    input {
+      margin-right: 0;
+      border-radius: 0 4px 4px 0;
+      border-left: none;
+    }
   }  
 }
 
