MULTISITE-2350 Enhance display of search page

--- a/sites/all/themes/ec_resp/bootstrap/less/variables.less
+++ b/sites/all/themes/ec_resp/bootstrap/less/variables.less
@@ -22,7 +22,7 @@
 @brand-success:         #5cb85c;
 @brand-warning:         #F0AD4E;
 @brand-danger:          #d9534f;
-@brand-info:            #FAF6B4;
+@brand-info:            #3a87ad;
 
 // Scaffolding
 // -------------------------
@@ -126,9 +126,9 @@
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              darken(@btn-danger-bg, 20%);
 
-@btn-info-color:                 #333;
+@btn-info-color:                 #fff;
 @btn-info-bg:                    @brand-info;
-@btn-info-border:                darken(@btn-info-bg, 40%);
+@btn-info-border:                darken(@btn-info-bg, 20%);
 
 @btn-link-disabled-color:        @gray-light;
 
