--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -50,18 +50,19 @@ ol.search-results {
 }
 
 /* --------------- Search Filters ---------------- */
-.apachesolr-browse-blocks {
-  .block-facetapi {
-    display: inline-block;
-    width: 50%;
-    vertical-align: top;
+.block-facetapi.panel {
+  .item-list {
+    margin: 0;
+    ul {
+      margin-bottom: 0;
+    }
   }
 }
 
 .block-current-search {
   h3 {
+    margin: 0;
     font-size: 1em;
-    color: #3B3B3B;
     font-weight: bold;
   }
 }
