--- a/sites/all/themes/ec_resp/css/less/search.less
+++ b/sites/all/themes/ec_resp/css/less/search.less
@@ -1,8 +1,7 @@
 /* --------------- Search Block ---------------- */
 #search-block-form {
   .form-item {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
     input {
       border-radius: 4px 0 0 4px;
       border-color: @btn-default-border;
@@ -55,6 +54,7 @@ ol.search-results {
     margin: 0;
     ul {
       margin-bottom: 0;
+      margin-top: 0;
     }
   }
 }
