MULTISITE-2353 Fix progress bar display

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -482,6 +482,7 @@ div#block-print-print-links {
 /* ---------------- Progress bar  ----------------- */
 .progress {
   overflow: visible;
+  margin-bottom: 40px;
 }
 
 /* -------------- Other Overrides ------------- */
