MULTISITE-2332 Improve display of ckeditor

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -239,6 +239,16 @@ ul {
   }
 }
 
+/* ----------------- Editor ------------------ */
+.cke_toolbar {
+  float: none !important;
+}
+body.cke_editable {
+  background-image: none !important;
+  background-color: #fff !important;
+  padding: 10px;
+}
+
 /* ----------------- Cards & fieldset------------------ */
 .card {
   background-color: #fff;
