MULTISITE-2359 Improve display of node edit form

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -73,3 +73,18 @@
     border-right: 1px solid #fff4f4;
   }
 }
+
+/* ------------------ Node form ------------------ */
+.node-form {
+  .vertical-tabs {
+    .vertical-tab-button {
+      background-color: #ddd;
+      &.selected {
+        background-color: #fafafa;
+      }
+    }
+    .vertical-tabs-panes {
+      background-color: #fafafa;
+    }
+  }
+}
