--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -321,7 +321,8 @@ input.form-button-disabled:active,
 }
 
 .form-item .description {
-  color: #999;
+  color: #777;
+  font-size: 0.8em;
 }
 
 .label {
