--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -42,6 +42,7 @@ body {
   padding: 0;
   border: 0;
   outline: 0;
+  background-color: #e3e1d9;
   #gradient .vertical(#F0EEE8; #e3e1d9; 0%; 100%);
 }
 body,
@@ -639,5 +640,5 @@ tr.even, tr.odd {
   margin-top: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #ddd;
+  background-color: #e3e1d9;
 }
