MULTISITE-2382 Enhance display of responsive sidebar

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -108,3 +108,18 @@ ul.nav-tabs {
     padding: 0;
   }
 }
+
+/* --------------- Responsive sidebar  --------------- */
+#responsive-sidebar > div {
+  position: absolute;
+  z-index: 1;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 15px;
+  margin-top: -20px;
+  background-color: @btn-default-bg;
+  border-bottom: 1px solid @brand-primary;
+  border-right: 1px solid @brand-primary;
+  width: 85%;
+  border-radius: 0 0 @border-radius-base 0;
+}
