--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -44,6 +44,7 @@ body {
   outline: 0;
   background-color: #e3e1d9;
   #gradient .vertical(#F0EEE8; #e3e1d9; 0%; 100%);
+  overflow-x: hidden;
 }
 body,
 body.overlay,
