--- a/sites/all/libraries/jstree/themes/ec-default/style.css
+++ b/sites/all/libraries/jstree/themes/ec-default/style.css
@@ -4,13 +4,13 @@
  * Supported plugins: ui (hovered, clicked), checkbox, contextmenu, search
  */
 
-.jstree-ec-default { background-color: #015F99; background-image: none; filter:progid:DXImageTransform.Microsoft.gradient(enabled=false); border-color: #074A8B; padding: 4px;}
-.jstree-ec-default a { display: block; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; color: #fff;}
+.jstree-ec-default { background-color: #015F99; background-image: none; filter:progid:DXImageTransform.Microsoft.gradient(enabled=false); border-color: #074A8B; padding: 4px; border-radius: 4px;}
+.jstree-ec-default a { display: block; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; color: #fff; height: 22px; line-height: 22px; padding: 0px 4px;}
 .jstree-ec-default a:hover { background-color: #074581; color: #fff; border-radius: 4px;}
 .jstree-ec-default a.active,
 .jstree-ec-default a.active:hover { background-color: #043F72; color: #fff; border-radius: 4px;}
 .jstree-ec-default li, 
-.jstree-ec-default ins { background-image:url("d.png"); background-repeat:no-repeat; background-color:transparent;}
+.jstree-ec-default ins { background-image:url("d.png"); background-repeat:no-repeat; background-color:transparent; margin-top: 3px;}
 .jstree-ec-default ins { width: 16px; height: 16px;}
 .jstree-ec-default li { display: block; background-position:-90px 0; background-repeat:repeat-y; margin-left: 3px;}
 .jstree-ec-default li.jstree-last { background:transparent;}
