MULTISITE-2398 Use bootstrap's mixins

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -88,5 +88,6 @@
 @import "feature-content-slider.less"; // feature content slider
 @import "feature-notifications.less"; // feature notifications
 @import "feature-social-bookmark.less"; // feature notifications
+@import "feature-set.less"; // feature set
 
 @import "hack-ec.less"; // hack EC styles
