--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -249,7 +249,7 @@ body.cke_editable {
   background-image: none !important;
   background-color: #fff !important;
   padding: 10px;
-  filter:progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  .reset-filter();
 }
 
 /* ----------------- Cards & fieldset------------------ */
