MULTISITE-2327 Allow webmaster to customize menu items

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -1,8 +1,18 @@
+/* --------------- Global ------------ */
+.block-menu {
+  .glyphicon {
+    &.menu-no-title {
+      padding-right: 0;
+    }    
+  }
+}
+
 /* --------------- Main Menu ------------ */
 .region-featured {
   min-height: 50px;
 }
 #main-menu {
+  font-size: 16px;
   .navbar {
     border-radius: 0;
   }
