MULTISITE-2397 Improve display of blocks and menus

--- a/sites/all/themes/ec_resp/css/less/menu.less
+++ b/sites/all/themes/ec_resp/css/less/menu.less
@@ -25,15 +25,17 @@
   .navbar-toggle,
   .navbar-toggle:hover, 
   .navbar-toggle:focus {
-    background-color: #074A8B;
+    background-color: @navbar-default-link-active-bg;
   }
   #sidebar-button {
     float: left;
   }
   .navbar-nav > li > a {
     text-transform:capitalize;
+    border: none;
+    background-color: @navbar-default-bg;
     &.active {
-      background-color: #074A8B;
+      background-color: @navbar-default-link-active-bg;
       color: #fff;
       border-radius: @border-radius-large @border-radius-large 0 0;
     }
