MULTISITE-2463 Improve display of forums

--- a/sites/all/themes/ec_resp/css/less/ec_resp.less
+++ b/sites/all/themes/ec_resp/css/less/ec_resp.less
@@ -87,7 +87,8 @@
 @import "feature-e-library.less"; // feature e-library
 @import "feature-content-slider.less"; // feature content slider
 @import "feature-notifications.less"; // feature notifications
-@import "feature-social-bookmark.less"; // feature notifications
+@import "feature-social-bookmark.less"; // feature social bookmark
+@import "feature-forum.less"; // feature forum
 @import "feature-set.less"; // feature set
 
 @import "hack-ec.less"; // hack EC styles
