MULTISITE-2463 Improve display of forums

--- a/sites/all/themes/ec_resp/css/less/comment.less
+++ b/sites/all/themes/ec_resp/css/less/comment.less
@@ -22,6 +22,11 @@
       padding-bottom: 2px;
       background-color: #fafafa;
       border-radius: 0 0 @border-radius-base @border-radius-base;
+      ul.links li a {
+        line-height: 34px;
+        display: inline-block;
+        text-transform: capitalize;
+      }
     }
   }
 }
