MULTISITE-1826 Enhance display of groupfield multipage

--- a/sites/all/themes/ec_resp/css/less/node.less
+++ b/sites/all/themes/ec_resp/css/less/node.less
@@ -87,4 +87,13 @@
       background-color: #fafafa;
     }
   }
+  .multipage-controls-list {
+    input.form-submit {
+      .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @border-radius-base);
+      .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
+      font-family: @font-family-base;
+      font-weight: normal;
+      text-shadow: none;
+    }
+  }
 }
