MULTISITE-2313 Add create content button on publishing profile

--- a/sites/all/themes/ec_resp/css/less/style.less
+++ b/sites/all/themes/ec_resp/css/less/style.less
@@ -583,8 +583,20 @@ tr.even, tr.odd {
   }   
 }
 
-/* ---------- Overlay layout styles ----------- */
+/* ---------- Create content button ----------- */
+#block-multisite-create-button-create-content-button {
+  text-align: center;
+  margin-bottom: 10px;
+  div.btn-group,
+  a.btn {
+    width: 100%;
+  }
+  .dropdown-menu {
+    text-align: left;
+  }
+}
 
+/* ---------- Overlay layout styles ----------- */
 .overlay #main,
 .overlay #content {
   width: auto;
